--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,6 +11,7 @@
 <title>Spring Boot</title>
 </head>
 <body>
+  <a href="/hello">click </a>
   <h1>Spring Boot - MVC web application example</h1>
   <hr>
 
