--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,30 +2,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta  charset=ISO-8859-1">
-
-<!-- Static content -->
-<link rel="stylesheet" href="/resources/css/style.css">
-<script type="text/javascript" src="/resources/js/app.js"></script>
-
-<title>Spring Boot</title>
+    <meta charset=ISO-8859-1">
+    <title>Contact List - Spring Boot Web Application Example</title>
 </head>
 <body>
-  <a href="/hello">click </a>
-  <h1>Spring Boot - MVC web application example</h1>
-  <hr>
-
-  <div class="form">
-    <form action="hello" method="post" onsubmit="return validate()">
-      <table>
-        <tr>
-          <td>Enter Your name</td>
-          <td><input id="name" name="name"></td>
-          <td><input type="submit" value="Submit"></td>
-        </tr>
-      </table>
-    </form>
-  </div>
-
+<h1 align="center">My Contact List</h1>
+<a href="/test">omg </a>
+<%- new java.util.Date()%>
 </body>
 </html>
