--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,8 +6,8 @@
     <title>Contact List - Spring Boot Web Application Example</title>
 </head>
 <body>
-<h1 align="center">My Contact List</h1>
-<a href="/test">omg </a>
-<%- new java.util.Date()%>
+<h1 align="center">Date</h1>
+<a href="/test">Pokaz date </a>
+
 </body>
 </html>
